Changed background images on index page

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,7 +6,7 @@
 
 .background-image 
 {
-    background-image: url('https://cdn.pixabay.com/photo/2017/07/31/23/45/pen-2562078_960_720.jpg');
+    background-image: url('https://i.guim.co.uk/img/media/10ca7d94797154abad498bb78db212e4ab93e5f0/0_212_5368_3221/master/5368.jpg?width=1200&height=1200&quality=85&auto=format&fit=crop&s=7feebf18676b24fa8484899ccb1cff01');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
