--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,12 +6,12 @@
 
 .background-image 
 {
-    background-image: url('https://www.euractiv.fr/wp-content/uploads/sites/3/2020/07/shutterstock_1722718684-800x450.jpg');
+    background-image: url('https://cdn2.vectorstock.com/i/1000x1000/43/21/modern-map-europe-with-countries-and-labels-vector-23694321.jpg');
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    height: 600px;
+    height: 200px;
 }
 #map {
     width: 100%;
