--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -25,3 +25,27 @@
     width: 100%;
     height: 900px;
 }
+
+.zoom {
+    padding: 50px;
+    transition: transform .2s; 
+    width: 420px;
+    height: 420px;
+    margin: 0 auto;
+  }
+  
+  .zoom:hover {
+    transform: scale(1.5); 
+  }
+
+  .zoomAboutUs {
+    padding: 50px;
+    transition: transform .2s; 
+    width: 600px;
+    height: 700px;
+    margin: 0 auto;
+  }
+  .zoomAboutUs:hover {
+    transform: scale(1.2); 
+  }
+  
