--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -48,4 +48,19 @@
   .zoomAboutUs:hover {
     transform: scale(1.2); 
   }
-  
+
+  input[type=text] {
+    width: 130px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+  }
+ 
+  input[type=text]:focus {
+    width: 110%;
+  }
+  .gallZoom{
+    margin: 0 auto;
+  }
+  .gallZoom:hover{
+    transform: scale(1.1); 
+  }
