--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -11,9 +11,23 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    
     height: 230px;
+    margin: 0; 
+    padding: 0;
 }
 
+@media (max-width: 768px) {
+  .background-image {
+      height: 150px;
+  }
+}
+
+@media (max-width: 480px) {
+  .background-image {
+      height: 100px;
+  }
+}
 .login-background-image 
 {
     background-image: url('https://upload.wikimedia.org/wikipedia/commons/5/58/1799_Clement_Cruttwell_Map_of_Europe_-_Geographicus_-_Europe-cruttwell-1799.jpg');
@@ -129,18 +143,29 @@
   cursor: pointer;
 }
 
+
 nav.active {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 @media (max-width: 768px) {
   #app header nav {
-      display: none; /* Hide navigation links by default on smaller screens */
+      display: none; 
   }
 
   .burger-menu {
-      display: flex; /* Show burger menu icon */
+      display: flex;
      
   }
+}
+
+@media (max-width: 768px) {
+  .grid-cols-1 {
+      grid-template-columns: 1fr; 
+  }
+  .grid-cols-2 {
+      grid-template-columns: repeat(2, minmax(0, 1fr)); 
+  }
+  
 }
 
